--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="aside__content">
                     <h2>Projects</h2>
                     <ul>
-                        <li><a href="#">Trello Clone</a></li>
-                        <li><a href="#">Amazon Clone</a></li>
+                        <li><a href="https://github.com/vogiaan1904/TaskManagementWeb">Trello Clone</a></li>
+                        <li><a href="https://github.com/KhoiDang1209/AI-Shopping-System">Amazon Clone</a></li>
                     </ul>
                 </div>
 
@@ -91,8 +91,8 @@
                     <div class="main__content--aside">
                         <h2>Projects</h2>
                         <ul>
-                            <li><a href="#">Trello Clone</a></li>
-                            <li><a href="#">Amazon Clone</a></li>
+                            <li><a href="https://github.com/vogiaan1904/TaskManagementWeb">Trello Clone</a></li>
+                            <li><a href="https://github.com/KhoiDang1209/AI-Shopping-System">Amazon Clone</a></li>
                     </div>
                     <div class="main__content--main">
                         <h2>Education</h2>
